--- a/css/index.css
+++ b/css/index.css
@@ -235,13 +235,13 @@ header {
 
 .about h2 {
   width: 100%;
-  color: white;
+  color: rgb(225, 239, 230);
 }
 .about h3 {
-  color: white;
+  color: rgb(225, 239, 230);
 }
 .about p {
-  color: white;
+  color: rgb(225, 239, 230);
   font-size: 2rem;
 }
 .br {
@@ -305,6 +305,7 @@ footer {
   height: 15vh;
   padding-top: 2.5vh;
   font-size: 3rem;
+  background-color: rgb(0, 4, 17);
 }
 button {
   background-color: #e7e7e7;
