--- a/css/index.css
+++ b/css/index.css
@@ -306,6 +306,7 @@ footer {
   padding-top: 2.5vh;
   font-size: 3rem;
   background-color: rgb(0, 4, 17);
+  color: ;
 }
 button {
   background-color: #e7e7e7;
